src/main/java/com/example/fooddelivery/error/NotFoundCustomerException.java
package com.example.fooddelivery.error;

public class NotFoundCustomerException extends RuntimeException{
    public NotFoundCustomerException(String message){
        super(message);
    }
}
